exercises/01-network-policy-restrict/allow-frontend-to-backend-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend-np
  namespace: g04
spec:
  podSelector:
    matchLabels:
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: orion
    - podSelector:
        matchLabels:
          tier: frontend
    ports:
    - port: 3000
      protocol: TCP
