exercises/01-network-policy-restrict/deny-all-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-np
  namespace: g04
spec:
  policyTypes:
    - Ingress
